# automated-posting-research

./: .gitignore  CLEANUP_REPORT.md  README.md  README_zh.md  advanced_x_creation_protocol.py  complete_demo_updated.py  core_validation.py  email_handler.py  example_usage.py  implementation_plan_generator.py  main.py  pyproject.toml  requirements.txt  setup_verify.py  temp_email_research.py  twitter_bot.py  validation_test_improved.py  x_account_creator_complete.py  x_registration_automation.py  x_registration_simple.py
docs/: architecture.md  challenges-solutions.md  comprehensive-summary.md  future-roadmap.md  implementation-status.md  index.md  resources-dependencies.md
docs/zh-cn/: architecture.md  challenges-solutions.md  comprehensive-summary.md  implementation-status.md  index.md  resources-dependencies.md
legacy/: actual_execution.py  actual_implementation.py  advanced_automation.py  complete_demo.py  core_validation_test.py  final_auto_posting_implementation.py  main.py  practical_auto_poster.py  quick_validation_test.py  true_implementation.py  validation_test.py  x_registration_selenium.py
modules/: captcha_solver.py  proxy_manager.py  workflow_manager.py
